# rocketGame

./: .gitignore  __init__.py  conftest.py  game.py  game_constants.py  install.bat  install.sh  main.py  plan.md  plan2.md  pyproject.toml  questions.json  readMe.md  tasks.md
challenges/: challenge.py  challenge_loader.py
game_engine/: constants.py  engine.py
managers/: challenge_manager.py  lives_manager.py  score_manager.py
models/: fog_of_war.py  game_grid.py  maze_generator.py  rocket.py
tests/: test_integration.py
tests/challenges/: test_challenge_loader.py  test_challenges.py
tests/managers/: test_challenge_manager.py  test_lives_manager.py  test_score_manager.py
tests/models/: test_fog_of_war.py  test_game_grid.py  test_maze_generator.py  test_rocket.py
tests/views/: test_views.py
views/: challenge_view.py  game_over_view.py  game_view.py  start_view.py  victory_view.py
web/: description.md  pyproject.toml  requirements.txt  server.py
web/game/: __init__.py  challenge.py  challenge_loader.py  challenge_manager.py  constants.py  engine.py  fog_of_war.py  game_grid.py  lives_manager.py  maze_generator.py  rocket.py  score_manager.py
web/static/: index.html
web/static/css/: styles.css
web/static/js/: api.js  canvas.js  challenge.js  game.js  main.js  utils.js
